<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#303030"
    tools:context=".usermanagement.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="358dp"
        android:layout_height="436dp"
        android:layout_marginBottom="6dp"
        android:rotation="20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.965"
        app:srcCompat="@drawable/money_logo_frame" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="131dp"
        android:layout_height="80dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/architects_daughter"
        android:text="CASH IN"
        android:textAlignment="center"
        android:textColor="@drawable/transparent_buttons_texts"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/imageView"
        app:layout_constraintEnd_toEndOf="@id/imageView"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="@id/imageView"
        app:layout_constraintTop_toTopOf="@id/imageView"
        app:layout_constraintVertical_bias="0.505"
        tools:ignore="HardcodedText,MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="149dp"
        android:layout_height="63dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="604dp"
        android:fontFamily="@font/architects_daughter"
        android:text="Quick"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#08AA08"
        android:textSize="48sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="177dp"
        android:layout_height="86dp"
        android:layout_marginBottom="544dp"
        android:fontFamily="@font/architects_daughter"
        android:text="CA$H"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#08AA08"
        android:textSize="60sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/loginErrorMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="#FF2020"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.117"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.285"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/userEmail"
        android:layout_width="362dp"
        android:layout_height="40dp"
        android:background="@drawable/rounded_editable_textviews"
        android:ems="30"
        android:fontFamily="@font/architects_daughter"
        android:hint="Email..."
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textAlignment="textStart"
        android:textColorHint="#BBB"
        android:textColor="#DDD"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.469"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.335"
        tools:ignore="Autofill,HardcodedText" />

    <EditText
        android:id="@+id/userPassword"
        android:layout_width="362dp"
        android:layout_height="40dp"
        android:background="@drawable/rounded_editable_textviews"
        android:ems="30"
        android:fontFamily="@font/architects_daughter"
        android:hint="Password..."
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textAlignment="textStart"
        android:textColorHint="#BBB"
        android:textColor="#DDD"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.469"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.405"
        tools:ignore="Autofill,HardcodedText" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/rememberSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/architects_daughter"
        android:text="Remember Me "
        android:textColor="#DDD"
        android:textSize="16sp"
        android:textStyle="bold"
        android:color="#0A0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.47"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/forgotButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:fontFamily="@font/architects_daughter"
        android:text="Forgot something?!"
        android:textColor="@drawable/transparent_buttons_texts"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.931"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.468"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/createAccountButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:fontFamily="@font/architects_daughter"
        android:text="Create a new account"
        android:textColor="@drawable/transparent_buttons_texts"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.915"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/architects_daughter"
        android:text="You're new?!"
        android:textColor="#DDD"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.875"
        tools:ignore="HardcodedText" />


</androidx.constraintlayout.widget.ConstraintLayout>